<resources>
    <string name="app_name">VReader</string>
    <string name="unknown">Unknown</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="club">Club</string>

    <string name="dr_import">Import</string>
    <string name="dr_gallery">Gallery</string>
    <string name="dr_setting">Settings</string>
    <string name="dr_communicate">Communicate</string>
    <string name="dr_share">Share</string>
    <string name="dr_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="gallery">Gallery</string>
    <string name="openfiledialog_title">Select a file</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="dirTag">dirTag</string>
</resources>
